fixing some text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,6 @@ body {
 }
 
 #UI {
-    position: relative;
-
     background-image: url(../img/background_single.png);
     background-color: aliceblue;
     background-position: center;
@@ -62,14 +60,12 @@ body {
     font-family: 'VT323', monospace;
 }
 
-#p1score {
-    margin-left: 70px;
+#p1 {
+    margin-left: 60px;
     margin-top: 100px;
-}
+    margin-right: 590px;;
 
-#p1rod {
-    margin-left: 70px;
-    margin-top: 25px;
+    text-align: center;
 }
 
 .fish {
@@ -79,7 +75,7 @@ body {
 }
 
 #water {
-    margin-top: 150px;
+    margin-top: 200px;
     margin-left: 140px;
     margin-right: 140px;
 
@@ -90,3 +86,4 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
